{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 435,
  "lineage": "7fa7d04a-a554-7080-82f0-b4681e677357",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d4e961110114a91",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-03674e8700cb943c2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03674e8700cb943c2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "victor-eng54",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045732c8f84e739cb",
            "private_dns": "ip-10-0-1-233.eu-west-1.compute.internal",
            "private_ip": "10.0.1.233",
            "public_ip": "52.18.139.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ab05427300ae6879",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ad01a16e6315ece7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b13fa50f59b064c4",
            "tags": {
              "Name": "Terraform-Victor_Eng54_App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad01a16e6315ece7"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.App_SG",
            "module.app.aws_subnet.app_subnet",
            "module.db.aws_instance.db_instance",
            "module.db.aws_security_group.db_SG",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea1efacb4e759335",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-054b3044708d6c474",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054b3044708d6c474",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "victor-eng54",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c067257e760e305d",
            "private_dns": "ip-10-0-2-4.eu-west-1.compute.internal",
            "private_ip": "10.0.2.4",
            "public_ip": "34.242.102.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca165bd5beb1259b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8d1159c2290b5b7",
            "tags": {
              "Name": "Victor_Eng54_App-DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01917ba17e554cb5a"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_security_group.db_SG",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05892b8449e45182e",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-ig"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db_private_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 27017
              }
            ],
            "id": "acl-0a27348125014129b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0c8d1159c2290b5b7"
            ],
            "tags": {
              "Name": "Victor_Eng54_App-private-NACL"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05042662ee177b08f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 150,
                "to_port": 27017
              },
              {
                "action": "allow",
                "cidr_block": "85.255.236.170/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0b13fa50f59b064c4"
            ],
            "tags": {
              "Name": "Victor_Eng54_App-public-NACL"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a431695f65c73419",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Victor_Eng54_App-private-route_table"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f57cdbddcc596b32",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05892b8449e45182e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table-Victor_Eng54_App-public"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372ddd777774d7fd",
            "route_table_id": "rtb-0a431695f65c73419",
            "subnet_id": "subnet-0c8d1159c2290b5b7"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_route_table.private",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d373c98b6248a419",
            "route_table_id": "rtb-0f57cdbddcc596b32",
            "subnet_id": "subnet-0b13fa50f59b064c4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "App_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0ad01a16e6315ece7",
            "description": "Allows for traffic on Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad01a16e6315ece7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 3000 from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "85.255.236.170/32"
                ],
                "description": "Port 22 from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "App-SG",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Victor_Eng54_App-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-01917ba17e554cb5a",
            "description": "Private securiy Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01917ba17e554cb5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 22 from public subnet",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 27107 from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 27107 from public subnet",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "DB Security Group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Victor_Eng54_App-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b13fa50f59b064c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b13fa50f59b064c4",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-subnet"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0c8d1159c2290b5b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c8d1159c2290b5b7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-private-subnet"
            },
            "vpc_id": "vpc-014aab24d28e3cc7d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-014aab24d28e3cc7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9d2da2387908743",
            "default_route_table_id": "rtb-0c21d4377d4401911",
            "default_security_group_id": "sg-0946f5e8f745f2adf",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014aab24d28e3cc7d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c21d4377d4401911",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-VPC"
            }
          }
        }
      ]
    }
  ]
}